Fix button highlight flashing when entering fullscreen.

This change prevents unhighlighting if the anchor button has not changed. Highlighting was added to a button when a widget is anchored to that button. On entering fullscreen, a widget's anchor is reset regardless of whether it was changed. This would unhighlight then rehighlight the button but only be noticable on Mac.

Bug: 905992
Change-Id: I4989a45101c704105f5b4a572e028c851b6165b7
Reviewed-on: https://chromium-review.googlesource.com/c/1351106
Commit-Queue: Caroline Rising <corising@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611778}
Former-commit-id: a5ed1eda76feea0619938451bdf41dcfe6216056